2009-02-03  Martin Lambers <marlam@marlam.de>

	* Gnulib update.

2008-10-14  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Gnulib update.
	* Get rid of libtool, and improve library detection.

2008-07-28  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Make sure that min_abs_lum is greater than zero
	when calling cvl_tonemap_ashikhmin02(), to avoid getting a
	cvl_error(). Reported by Olaf Cramer. Thanks!

2008-07-26  Martin Lambers <marlam@marlam.de>

	* configure.ac, build-aux/compile: Add AM_PROG_CC_C_O macro.
	* src/cvltonemap.cpp, src/import.h, src/import.c, src/Makefile.am: Add
	input filters for HDR file formats that are supported by the pfstools.
	* NEWS: Update for 0.2.2.
	* src/tonemap_selector.cpp: Make Schlick94 the default method.
	* src/import.c: Improve error messages.
	* src/import.h, src/import.c, src/cvltonemap.h, src/cvltonemap.cpp:
	Detect the presence of pfstools automatically, and offer more
	informative messages to the user in case they are missing.
	* src/cvltonemap.cpp: Do not use a default file name extension in the
	Save dialog.

2008-07-25  Martin Lambers <marlam@marlam.de>

	* src/precision_selector.h, src/precision_selector.cpp,
	src/view_area.h, src/view_area.cpp, src/cvltonemap.h,
	src/cvltonemap.cpp, src/Makefile.am: Add a selector to select 16 or 32
	bit floating point precision. 16 bit halves graphcis memory usage and is
	usually	sufficient.
	* NEWS: Update for 0.2.2.

2008-07-22  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Gnulib update.
	* configure.ac, doc/cvltonemap.1, doc/cvltonemap.texi: Bump version to
	0.2.2.
	* configure.ac: Require CVL >= 0.2.5.
	* gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4,
	gnulib/Makefile.am, configure.ac, src/Makefile.am, build-aux/cvl.m4, 
	build-aux/glew.m4, build-aux/ltmain.sh, build-aux/Makefile.am, 
	mhlib/Makefile.am: Improve detection and usage of external libraries.
	Use libtool to get linking right.
	* src/cvltonemap.cpp, src/view_area.cpp: Reduce usage of graphics