@@ -1,6 +1,8 @@
 2009-02-03  Martin Lambers <marlam@marlam.de>
 
 	* Gnulib update.
+	* build-aux/glew.m4, build-aux/cvl.m4, build-aux/qt4.m4, configure.ac,
+	src/Makefile.am: Improve library detection.
 
 2008-10-14  Martin Lambers <marlam@marlam.de>
 
